@@ -1,6 +1,6 @@
 AUX pyside-qtscripttools.patch 544 RMD160 ed4599f187726b369a56149e4564cefb21fce783 SHA1 71ee6f81473e2e1294b4bb580b299ffa4830429e SHA256 ebc8a450f052f7b196501493431a89ca0711db7fcbb174a328eb8c637738e3d1
 DIST pyside-qt4.5+0.2.2.tar.bz2 739965 RMD160 f6a446878d7f788a89df9eecaf068460b41fb9cb SHA1 3341df57a96a575ac8af2560af88dc71bf10b771 SHA256 a397872be12c26ed191182e880d0458156ef06dc931ee5742794e449a3e29aa3
-EBUILD pyside-0.2.2.ebuild 941 RMD160 464d61fb4d37fc804f6378d762170ac1ea507eb0 SHA1 b55557997be5737d72dcfc3df6dd01a7f975ff28 SHA256 a698b1ffa75e08df299ce0c2f24811f7dc46ae2b97c04822584b1b0a17d37003
-EBUILD pyside-9999.ebuild 904 RMD160 892e47ce2ad585529d519ababe8d2e7ecd18c6ab SHA1 9b1b3ce5d1a4c19f7610b21c57e3d3d904227cc6 SHA256 194032a870c5aec8249713caeb274b245d5d47aacf3b29b59e64eb3f37f736ad
-MISC ChangeLog 914 RMD160 826977b3101963b6ed10fe11aa34d7bdd79d051e SHA1 65848994b20c3355277d911bfa8f5b204faac3ac SHA256 9fed00244da1c1475d0e1ec81ecb8611de567d7f1ed0470a378bbebb65fd0a25
+EBUILD pyside-0.2.2.ebuild 1032 RMD160 2c78f5592dd7960ed0c21a5440858f6705ed9023 SHA1 78d0963489d8205108260d0d1d867edbdfbc9fec SHA256 cdd52fd5013c0a25fb515a4f8efa3ed02f9e0e91e6c3e725f140f5e75a2e1d4f
+EBUILD pyside-9999.ebuild 995 RMD160 1a9fbf6b9843e7cf2e2b033b2ae7db53c65a4e99 SHA1 75bee3d99bcfdc5e4f27d79f1ff760593c4d8bcd SHA256 12cd08215e97c6def744581c8d5ba8b6333e9155d7f35eaa1b8d909be8356326
+MISC ChangeLog 1040 RMD160 1a6243564e374b0702e5bce987911c4264472537 SHA1 7f3a61eacfb93ce543ee1e8ede5c568737203d1f SHA256 0218aaeb300ed427df27250ded49bac277f2c113f4d1cfdd7f39dae95093a656
 MISC metadata.xml 156 RMD160 2c307fe3d7f514f10f158344b51114121632f411 SHA1 1b61305bd125f03b40ed85c17989140608e1efee SHA256 2bc85ad7339ae0191c26e435f2da777058779a7ebf73d14658a6ea7bfcec01b2
