@@ -37,3 +37,8 @@ src_prepare() {
 	epatch "${FILESDIR}/${PN}-qtscripttools.patch"
 	sed -e 's/-2.6//' -i data/CMakeLists.txt || die "sed failed"
 }
+
+src_install() {
+	cmake-utils_src_install
+	dodoc AUTHORS ChangeLog || die "dodoc failed"
+}
