@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  06 Dec 2009; Dominik Kapusta <ayoy@gentoo.org> pyside-0.2.2.ebuild,
+  pyside-9999.ebuild:
+  Added some docs to src_install
+
 *pyside-0.2.2 (05 Dec 2009)
 
   05 Dec 2009; Dominik Kapusta <ayoy@gentoo.org> -pyside-0.1.4.5.ebuild,
